--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="player_big_button">100dp</dimen>
     <dimen name="progress_bar_size">44dp</dimen>
     <dimen name="progress_bar_margin">140dp</dimen>
+    <dimen name="add_button_padding">24dp</dimen>
+    <dimen name="font_usual_size">14sp</dimen>
 </resources>
