--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -155,7 +155,10 @@
         <item name="android:gravity">center</item>
         <item name="android:visibility">gone</item>
     </style>
-    <style name="UpdateButton">
+    <style name="LibraryMessageStyle" parent="TrackErrorStyle">
+        <item name="android:paddingTop">106dp</item>
+    </style>>
+    <style name="ButtonOnSecondary">
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:backgroundTint">?attr/colorOnSecondary</item>
@@ -167,7 +170,7 @@
         <item name="android:textColor">?attr/colorSecondary</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/font_usual_size</item>
         <item name="cornerRadius">54dp</item>
     </style>
     <style name="HistoryTitleStyle">
@@ -208,6 +211,36 @@
         <item name="layout_constraintEnd_toEndOf">parent</item>
         <item name="layout_constraintHorizontal_bias">1.0</item>
         <item name="android:singleLine">true</item>
+    </style>
+    <style name="TabStyle">
+        <item name="android:layout_marginStart">@dimen/main_padding</item>
+        <item name="android:layout_marginEnd">@dimen/main_padding</item>
+    </style>
+    <style name="TabLayoutStyle">
+        <item name="android:textAlignment">center</item>
+        <item name="tabMode">fixed</item>
+        <item name="tabGravity">fill</item>
+        <item name="tabTextColor">?attr/colorOnSecondary</item>
+        <item name="android:background">?attr/colorSecondary</item>
+        <item name="android:height">48dp</item>
+        <item name="tabIndicator">@drawable/tab_indicator</item>
+        <item name="tabIndicatorColor">?attr/colorOnSecondary</item>
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabIndicatorGravity">bottom</item>
+        <item name="tabIndicatorAnimationMode">linear</item>
+        <item name="tabIndicatorFullWidth">true</item>
+        <item name="tabPaddingStart">@dimen/main_padding</item>
+        <item name="tabPaddingEnd">@dimen/main_padding</item>
+    </style>
+    <style name="TabLayoutTextAppearance">
+        <item name="fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+    </style>
+    <style name="ViewPagerStyle">
+        <item name="android:paddingStart">@dimen/main_padding</item>
+        <item name="android:paddingEnd">@dimen/main_padding</item>
+        <item name="android:paddingBottom">@dimen/main_padding</item>
     </style>
 
 </resources>
