--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,32 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/SecondaryLayout"
     android:paddingStart="@dimen/zero"
     android:paddingLeft="@dimen/zero"
-    android:paddingRight="@dimen/zero">
+    android:paddingRight="@dimen/zero"
+    tools:context=".search.ui.SearchFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/SecondaryLayout">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/SecondaryLayoutTitle">
-
-            <ImageView
-                android:id="@+id/search_back_button"
-                style="@style/BackIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-
-            <TextView
-                style="@style/OtherSecondaryTitle"
-                android:text="@string/search" />
-        </LinearLayout>
+        <TextView
+            style="@style/OtherSecondaryTitle"
+            android:text="@string/search" />
 
         <FrameLayout
             android:layout_width="match_parent"
