--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/SecondaryLayout">
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/SecondaryLayout"
+    tools:context=".settings.ui.SettingsFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/SecondaryLayoutTitle">
-
-        <ImageView
-            android:id="@+id/settings_back_button"
-            style="@style/BackIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/SettingsTitle"
-            android:text="@string/settings"/>
-    </LinearLayout>
+    <TextView
+        style="@style/OtherSecondaryTitle"
+        android:text="@string/settings"/>
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/theme_switch"
