--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -2,22 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/SecondaryLayout"
-    tools:context=".library.ui.LibraryActivity">
-        <LinearLayout
-            style="@style/SecondaryLayoutTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    tools:context=".library.ui.LibraryFragment">
 
-                <ImageView
-                    android:id="@+id/library_back_button"
-                    style="@style/BackIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-                <TextView
-                    style="@style/OtherSecondaryTitle"
-                    android:text="@string/library"/>
-        </LinearLayout>
+        <TextView
+            style="@style/OtherSecondaryTitle"
+            android:text="@string/library"/>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
