--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,28 @@
         <item name="android:background">?attr/colorPrimary</item>
         <item name="android:orientation">vertical</item>
     </style>
+    <style name="BottomMenuStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="itemBackground">?attr/colorSecondary</item>
+        <item name="itemIconTint">@drawable/menu_item_color</item>
+        <item name="itemPaddingBottom">6dp</item>
+        <item name="itemPaddingTop">10dp</item>
+        <item name="itemTextColor">@drawable/menu_item_color</item>
+        <item name="animationMode">slide</item>
+        <item name="colorOutline">@color/YP_Light_Gray</item>
+        <item name="itemTextAppearanceInactive">@style/MenuTextAppearance</item>
+        <item name="itemTextAppearanceActive">@style/MenuTextAppearance</item>
+    </style>
+    <style name="BottomMenuActiveItem">
+        <item name="android:color">@null</item>
+    </style>
+    <style name="MenuTextAppearance">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:letterSpacing">0.1</item>
+    </style>
     <style name="SecondaryLayout">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
@@ -16,59 +38,11 @@
         <item name="android:paddingRight">@dimen/main_padding</item>
         <item name="android:layout_gravity">top</item>
     </style>
-    <style name="SecondaryLayoutTitle">
-        <item name="android:orientation">horizontal</item>
-        <item name="android:layout_margin">@dimen/title_margin</item>
-    </style>
-    <style name="MainTitleStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/main_title_text_size</item>
-        <item name="android:textColor">?attr/colorOnPrimary</item>
-        <item name="android:paddingTop">10dp</item>
-        <item name="android:layout_marginTop">@dimen/title_margin</item>
-        <item name="android:layout_marginBottom">40dp</item>
-        <item name="fontFamily">@font/ys_display_medium</item>
-        <item name="android:textFontWeight">500</item>
-    </style>
-    <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">0dp</item>>
-        <item name="android:layout_weight">1</item>
-        <item name="android:layout_marginBottom">@dimen/main_padding</item>
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-        <item name="android:gravity">center</item>
-        <item name="iconSize">@dimen/icon_size</item>
-        <item name="iconGravity">textStart</item>
-        <item name="iconTint">?attr/colorOnPrimaryContainer</item>
-        <item name="iconPadding">@dimen/icon_padding</item>
-        <item name="cornerRadius">@dimen/main_button_radius</item>
-        <item name="android:backgroundTint">?attr/colorPrimaryContainer</item>
-        <item name="android:textAppearance">?attr/textAppearanceHeadline1</item>
-        <item name="android:textColor">?attr/colorOnPrimaryContainer</item>
-        <item name="android:textSize">@dimen/main_button_text_size</item>
-        <item name="textAllCaps">false</item>
-        <item name="android:fontFamily">@font/ys_display_medium</item>
-        <item name="android:textFontWeight">500</item>
-        <item name="android:textStyle">normal</item>
-    </style>
-    <style name="SettingsTitle">
-        <item name="android:paddingTop">10dp</item>
-        <item name="android:paddingLeft">@dimen/setting_title_padding</item>
-        <item name="android:paddingBottom">@dimen/setting_title_padding</item>
-        <item name="android:paddingRight">@dimen/setting_title_padding</item>
-        <item name="android:textSize">@dimen/setting_title_text_size</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">?attr/colorOnSecondary</item>
-        <item name="android:fontFamily">@font/ys_display_medium</item>
-        <item name="android:textFontWeight">500</item>
-    </style>
     <style name="OtherSecondaryTitle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">14dp</item>
-        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingLeft">0dp</item>
         <item name="android:paddingBottom">16dp</item>
         <item name="android:textSize">@dimen/setting_title_text_size</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
@@ -160,7 +134,7 @@
     </style>>
     <style name="ButtonOnSecondary">
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginTop">@dimen/add_button_padding</item>
         <item name="android:backgroundTint">?attr/colorOnSecondary</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
@@ -212,10 +186,6 @@
         <item name="layout_constraintHorizontal_bias">1.0</item>
         <item name="android:singleLine">true</item>
     </style>
-    <style name="TabStyle">
-        <item name="android:layout_marginStart">@dimen/main_padding</item>
-        <item name="android:layout_marginEnd">@dimen/main_padding</item>
-    </style>
     <style name="TabLayoutStyle">
         <item name="android:textAlignment">center</item>
         <item name="tabMode">fixed</item>
@@ -231,11 +201,6 @@
         <item name="tabIndicatorFullWidth">true</item>
         <item name="tabPaddingStart">@dimen/main_padding</item>
         <item name="tabPaddingEnd">@dimen/main_padding</item>
-    </style>
-    <style name="TabLayoutTextAppearance">
-        <item name="fontFamily">@font/ys_display_medium</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">?attr/colorOnSecondary</item>
     </style>
     <style name="ViewPagerStyle">
         <item name="android:paddingStart">@dimen/main_padding</item>
