--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/SecondaryLayout"
     android:paddingTop="@dimen/main_padding"
-    android:paddingEnd="0dp"
     tools:context=".player.ui.PlayerFragment">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingEnd="@dimen/main_padding">
+    android:paddingEnd="@dimen/main_padding"
+    android:paddingStart="@dimen/main_padding">
 
 <ImageView
     android:id="@+id/player_back_button"
@@ -114,7 +114,7 @@
     app:layout_constraintEnd_toEndOf="@id/end_guide"
     app:layout_constraintTop_toTopOf="@id/play_button"
     app:layout_constraintBottom_toBottomOf="@id/play_button"
-    android:src="@drawable/like_button"/>
+    android:src="@drawable/like_button_disabled"/>
 
 <TextView
     android:id="@+id/current_time_tv"
